--- a/Viking_graben_Data.ipynb
+++ b/Viking_graben_Data.ipynb
@@ -753,7 +753,7 @@
     "\n",
     "# we can find the most common offsets by using multimode.\n",
     "\n",
-    "modes=st.multimode(grp_x)"
+    "#modes=st.multimode(grp_x)"
    ]
   },
   {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "f7035942",
+   "id": "9926f987",
    "metadata": {
     "scrolled": true
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 332,
-   "id": "74f69a25",
+   "id": "008210a8",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "id": "19088ef5",
+   "id": "a552e2c4",
    "metadata": {},
    "outputs": [
     {
